[package]
name = "cardapi"
version = "0.1.0"
authors = ["jhodgson91 <jhodgson71@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
rocket = "0.4.0-rc.1"
serde = "1.0.82"
serde_derive = "1.0.82"
rand = "0.6.1"
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool", "json"]

[dependencies.serde_json]
version = "1.0.33"
features = ["preserve_order"]